# RoboController-ROS

./: .travis.yml  CMakeLists.txt  README.md  package.xml  robocontroller_myzharbot.launch  robocontroller_simul.launch  robocontroller_woodybot.launch
config/: myzharbot_params.yaml  rc_serial.yaml  woodybot_params.yaml
msg/: Debug.msg  Debug_00_23.msg  Debug_200_220.msg  Debug_250_259.msg  Debug_50_53.msg  Debug_60000_60019.msg  Pose.msg  Telemetry.msg
rqt/: MyzharBot.perspective
src/: robocontroller_debug_node.cpp  robocontroller_node.cpp  robocontroller_teleop_key_node.cpp  robocotroller_teleop_key_node.cpp
src/rbctrliface/include/: rbctrliface.h  rc_msg_srv.h  robotctrl.h
src/rbctrliface/src/: rbctrliface.cpp  robotctrl.cpp
src/rcteleop/include/: rc_teleop_key.h
src/rcteleop/src/: rc_teleop_key.cpp
srv/: EnableCommWD.srv  EnablePID.srv  EnableSaveToEeprom.srv  GetBoardStatus.srv  GetPID.srv  SetBatteryCalib.srv  SetPID.srv  SetRegister.srv
