<?xml version="1.0"?>
<package>
    <name>robocontroller</name>
    <version>0.0.1</version>

    <description>ROS package to control a robot based on RoboController Board</description>
    <maintainer email="myzhar@robot-home.it">Walter ''Myzhar'' Lucetti</maintainer>
    <license>LGPLv3</license>

    <url type="website">http://www.robot-home.it</url>
    <url type="website">http://www.katodo.com</url>
    <url type="repo">https://github.com/Myzhar/RoboController/tree/master/HLU/ROS</url>

    <author email="myzhar@robot-home.it">Walter "Myzhar" Lucetti</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>libmodbus-dev</build_depend>
    <build_depend>ncurses++</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
	


    <run_depend>libmodbus</run_depend>
    <run_depend>ncurses++</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
